--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -11,3 +11,12 @@
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
+Deze proef is geschreven in het kader van het voltooien van de richting Toegepaste Informatica met keuzetraject Mianframe-beheer en Applicaties. Dit vond ik een interessant onderwerp omdat de mainframe me intrigeert en Health Checker was ook iets dat nog niet binnen de opleiding besproken was maar dat mij wel interesseerde. Ik vond deze proef ook zeer speciaal omdat mijn proef heeft bijgedragen aan een systeem dat nu geïmplementeerd is door de opdrachtgever. Ook het feit dat ik niks kende van het onderwerp was iets wat me aansprak om zo mijn kennis van de mainframe te verrijken. Deze proef is er wel niet zomaar gekomen en daarom wil ik nog enkele mensen bedanken voor hun bijdrage aan deze Bachelorproef.
+
+De eerste persoon die ik wil bedanken is Kevin Somers voor de hulp en ondersteuning doorheen de gehele bachelorproef. Ik kon altijd terecht bij hem met vragen. En heb van hem ook nog veel geleerd over de Mainframe. Verder stond hij ook klaar om elke week te bellen om de proef te bespreken. Ik wil ook de Zweedse collega van Kevin, Bengt Gellingskog bedanken om samen met Kevin mij te ondersteunen met deze proef tijdens onze discussies over de Health Checker setup. Verder wil ik ook nog de andere collega's waaronder Louis Huysman en Alain de Waele van HCL te zuiderpoort bedanken en HCL Technologies BVBA zelf voor de mogelijkheid om deze proef te doen binnen hun infrastructuur.
+
+Ik wil ook mijn promotor Thomas Pollet bedanken voor zijn feedback op de inhoud van mijn bachelorproef.
+
+Tot slot wil ik ook mijn ouders bedanken voor de steun om mijn opleiding en mijn bachelorproef te voltooien. Waaronder de feedback op de schrijfwijze van mijn proef.
+
+Ik wens u veel plezier toe bij het lezen van deze proef.
