Bachelorproef first draft is af

--- a/bachproef-tin.bib
+++ b/bachproef-tin.bib
@@ -67,4 +67,11 @@
   file   = {:C\:/Users/Jonas-PC-2/Documents/Hogent/Hogent 1920/Bachelorproef/Bib/CICS Transaction Server from Start to Finish.pdf:PDF},
 }
 
+@Article{IBM2010,
+  author = {IBM},
+  date   = {2010},
+  title  = {Serving dynamic Web pages on z/OS},
+  url    = {https://www.ibm.com/support/knowledgecenter/zosbasics/com.ibm.zos.zmidwebs/zmiddle_86.htm?view=embed#zmiddle_86__usingplug},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
