--- a/inleiding.tex
+++ b/inleiding.tex
@@ -40,7 +40,6 @@ Daarnaast is er in deze proef ook een focus op verdere efficiëntere logging van
 
 \begin{itemize}
 	\item Kan er een efficiënt log-systeem opgezet worden voor de z/OS Health Checker output?
-	\item Is de het mogelijk om de output van z/OS Health Checker vanuit SDSF te loggen op een Web interface?
 \end{itemize}
 
 
@@ -64,7 +63,7 @@ In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand v
 
 In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de hoofdonderzoeksvraag en de 1ste deelonderzoeksvraag.
 
-In Hoofdstuk~\ref{ch:methodologie} wordt onderzocht naar de 2de deelonderzoeksvraag 
+In hoofdstuk~\ref{ch:Vervolg op bachelorproef} word er gekeken naar eventuele vervolgen voor deze bachelor proef.
 
 
 % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
