--- a/standvanzaken.tex
+++ b/standvanzaken.tex
@@ -29,7 +29,7 @@ De term mainframe is duidelijk vervaagd met de jaren daarom wordt de term meesta
 \begin{figure}[h]
 	\centering
 	\includegraphics{img/mainframe}
-	\caption[Mainframe z13 en LinuxOne Rockhopper]{Een paar mainframes, links de IBM z systems z13 en rechts de LinuxOne Rockhopper}
+	\caption[Mainframe]{2 mainframes de System z Business Class en Enterprise class(\cite{Ebbers2011})}
 	\label{fig:mainframe}
 \end{figure}
 
@@ -53,7 +53,7 @@ Deze aparte systemen noemt men een logische partitie of LPAR. Al deze LPARs staa
 \begin{figure}[h]
 	\centering
 	\includegraphics{img/LPAR}
-	\caption[Logische Partities]{Visualisatie van logische partities}
+	\caption[Logische Partities]{Visualisatie van logische partities(\cite{Ebbers2011})}
 	\label{fig:lpar}
 \end{figure}
 
@@ -80,7 +80,7 @@ Sommige z/OS applicaties op verschillende LPARs hebben vaak toegang nodig to dez
 \begin{figure}[h]
 	\centering
 	\includegraphics{img/ParallelSysplex}
-	\caption[Visualisatie van een Parallel Sysplex]{Visualisatie van een parallel sysplex met 2 LPARs en 1 Coupling Facility. Control Units controleren de logica voor bepaalde I/O-apparaten zoals printers of opslagfaciliteiten.}
+	\caption[Visualisatie van een Parallel Sysplex]{Visualisatie van een parallel sysplex met 2 LPARs en 1 Coupling Facility. Control Units controleren de logica voor bepaalde I/O-apparaten zoals printers of opslagfaciliteiten.(\cite{Ebbers2011})}
 	\label{fig:parallelsysplex}
 \end{figure}
 
@@ -96,7 +96,7 @@ z/OS is vandaag een resultaat van tientallen jaren technologische vooruitgang do
 \begin{figure}[h]
 	\centering
 	\includegraphics{img/Omgeving_zOS}
-	\caption[z/OS binnen de mainframe omgeving]{z/OS binnen de hardware omgeving bevindt zich op de mainframe. En wordt aangestuurd door aangesloten consoles/terminals. Om dan de data te bewerken op tape drives of DASD(term voor hard disk binnen de mainframe wereld)}
+	\caption[z/OS binnen de mainframe omgeving]{z/OS binnen de hardware omgeving bevindt zich op de mainframe. En wordt aangestuurd door aangesloten consoles/terminals. Om dan de data te bewerken op tape drives of DASD(term voor hard disk binnen de mainframe wereld)\cite{Ebbers2011}}
 	\label{fig:omgevingzos}
 \end{figure}
 
@@ -131,7 +131,7 @@ De fysieke opslag is daarom opgedeeld in verschillende stukken die elke hun eige
 \begin{figure}[h]
 	\centering
 	\includegraphics{img/Storage}
-	\caption[Visualisatie van het concept van virtuele storage]{Bijna alle programma's gebruiken virtuele adressen als ze refereren naar data in de real storage. Maar als een aangevraagd adres zich niet in de real storage bevindt zal er een onderbreking plaatsvinden en zal men de nodige data uit auxiliary storage naar de real storage laden(ook wel paging genoemd)}
+	\caption[Visualisatie van het concept van virtuele storage]{Bijna alle programma's gebruiken virtuele adressen als ze refereren naar data in de real storage. Maar als een aangevraagd adres zich niet in de real storage bevindt zal er een onderbreking plaatsvinden en zal men de nodige data uit auxiliary storage naar de real storage laden(ook wel paging genoemd)(\cite{Ebbers2011})}
 	\label{fig:storage}
 \end{figure}
 
@@ -219,7 +219,7 @@ Het framework van z/OS Health Checker is de interface die je gebruikt om checks 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.7\linewidth]{img/HCFramework}
-	\caption[z/OS Health Checker Framework]{Het z/OS Health Checker Framework dat het mogelijk maakt om checks uit te voeren en de output hiervan door te geven aan SDSF en andere tools.}
+	\caption[z/OS Health Checker Framework]{Het z/OS Health Checker Framework dat het mogelijk maakt om checks uit te voeren en de output hiervan door te geven aan SDSF en andere tools.(\cite{IBMCorporation2019})}
 	\label{fig:hcframework}
 \end{figure}
 
