--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -97,7 +97,7 @@
 \input{inleiding}
 \input{standvanzaken}
 \input{methodologie}
-
+\input{vervolg}
 % Voeg hier je eigen hoofdstukken toe die de ``corpus'' van je bachelorproef
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
@@ -123,6 +123,9 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 
 % Verwijzing naar het bestand met de inhoud van het onderzoeksvoorstel
 \input{../voorstel/voorstel-inhoud}
+
+\input{literatuurstudie}
+
 
 \renewcommand{\chaptername}{Bijlangen}
 \chapter{Bijlagen}
